k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-data
---
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-sec
